Minor updates to remove migration warnings & added in untracked migration files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/ng-chem"]
 	path = src/ng-chem
-	url = git://github.com/thesgc/ng-chem.git
+	url = https://github.com/ddamerell53/ng-chem.git
